--- a/templates/product_details.html
+++ b/templates/product_details.html
@@ -34,7 +34,7 @@
         }
 
         .search-button {
-            background-color: #34c759;
+            background: linear-gradient(180deg, #6aa84f, #93c47d);
             color: white;
             border: none;
             padding: 15px 35px;
@@ -45,7 +45,7 @@
         }
 
         .search-button:hover {
-            background-color: #28a745;
+            background: linear-gradient(180deg, #74E193, #98FF99);
         }
 
         .product-container {
@@ -87,7 +87,7 @@
             width: 200px;
             margin: 30px auto 0;
             padding: 12px 24px;
-            background-color: #34c759;
+            background: linear-gradient(180deg, #6aa84f, #93c47d);
             color: white;
             border: none;
             border-radius: 8px;
@@ -101,7 +101,7 @@
         }
 
         .add-to-basket-btn:hover {
-            background-color: #28a745;
+            background: linear-gradient(180deg, #74E193, #98FF99);
         }
 
         .success-message {
