--- a/static/base_style.css
+++ b/static/base_style.css
@@ -82,9 +82,9 @@ a {
 
 .basket-button {
   position: absolute;
-  top: 40px;
-  right: 50px;
-  background: linear-gradient(180deg, #6aa84f, #93c47d);
+  top: 45px;
+  right: 55px;
+  background: linear-gradient(180deg, #6f4e37, #a17759);
   font-family: Calibri;
   color: white;
   padding: 10px 15px;
@@ -101,7 +101,7 @@ a {
 }
 
 .basket-button:hover {
-  background: linear-gradient(180deg, #74E193, #98FF99);
+  background: linear-gradient(180deg, #6aa84f, #93c47d);
   transform: translateY(-2px);
 }
 
@@ -152,7 +152,7 @@ a {
 }
 
 .buttons {
-    background: linear-gradient(180deg, #6aa84f, #93c47d);
+  background: linear-gradient(180deg, #6aa84f, #93c47d);
     border: none;
     color: white;
     padding: 10px 20px;
