search bar changed

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -19,7 +19,7 @@
 
 
         <div id="main_text">
-            <p id="main_2">Your smart companion for conscious consumption!<br><br>
+            <p id="main_2"><strong>Your smart companion for conscious consumption!</strong><br><br>
             At Sustainabite, we make sustainability simple. With our database of over 4,500 Finnish products, you can calculate the environmental footprint of your shopping basket in just a few clicks. Whether you're aiming to reduce carbon emissions, make planet-friendly food choices, or just stay informed — we're here to guide your journey.</p>
             <p id="main_3">Start explorin. Sho smarte. Live sustainabl</p>
         </div>
