--- a/static/landing_style.css
+++ b/static/landing_style.css
@@ -42,7 +42,7 @@
 }
 
 #main_category {
-  color: rgb(#403a3a);
+  color: #403a3a;
   font-family: Calibri;
   font-weight: bolder;
   font-size: 3em;
@@ -52,7 +52,7 @@
 }
 
 #main_text {
-  width: 900px;
+  width: 1000px;
   text-align: center;
   padding: 20px;
   margin: 0 auto;
@@ -75,6 +75,8 @@
 #main_3 {
   font-family: 'Signature';
   font-size: 2.6em;
+  margin-top: 20px;
+  margin-bottom: 0px;
 }
 
 a {
@@ -311,14 +313,14 @@ body {
 .search-container {
   display: flex;
   justify-content: center;
-  margin: 40px auto 20px;
+  margin: 0px auto 100px;
   width: 100%;
 }
 
 .search-form {
   display: flex;
   width: 90%;
-  max-width: 700px;
+  max-width: 800px;
   border-radius: 30px;
   overflow: hidden;
   border: 2px solid #c9bfaf;
@@ -328,8 +330,8 @@ body {
 
 .search-bar {
   flex-grow: 1;
-  padding: 15px 20px;
-  font-size: 1.2rem;
+  padding: 20px 20px;
+  font-size: 1.3rem;
   border: none;
   outline: none;
   font-family: 'Calibri', sans-serif;
@@ -339,7 +341,7 @@ body {
   padding: 0 25px;
   background: linear-gradient(180deg, #6aa84f, #93c47d);
   color: white;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   border: none;
   font-family: Calibri, sans-serif;
   cursor: pointer;
