--- a/static/base_style.css
+++ b/static/base_style.css
@@ -180,3 +180,20 @@ input {
 .buttons:active {
   transform: translateY(0);
 }
+
+#sustainable-score-image {
+  text-align: center;
+}
+
+#sustainabilityImage {
+  width: 150px;
+  display: flex;
+  margin: 0 auto;
+}
+
+#sustainability_all {
+  width: 200px;
+  display: flex;
+  margin: 0 auto;
+  padding-top: 20px;
+}
