--- a/templates/landing.html
+++ b/templates/landing.html
@@ -47,7 +47,7 @@
                 <div class="card">
                     <a href="/query-alcohol" class="card-link">
                       <div class="content">
-                        <h2 class="title">Alcohol</h2>
+                        <h2 class="title">Alcoholic beverages</h2>
                       </div>
                     </a>
                   </div>
@@ -56,7 +56,7 @@
                   <div class="card">
                     <a href="/query-canned-food" class="card-link">
                         <div class="content">
-                            <h2 class="title">Canned food</h2>
+                            <h2 class="title">Canned foods</h2>
                         </div>
                     </a>
                 </div>
@@ -72,7 +72,7 @@
                 <div class="card">
                     <a href="/query-chocolate" class="card-link">
                         <div class="content">
-                            <h2 class="title">Chocolate</h2>                            
+                            <h2 class="title">Chocolate and sweets</h2>                            
                         </div>
                     </a>
                 </div>
@@ -80,7 +80,7 @@
                 <div class="card">
                     <a href="/query-fruit" class="card-link">
                         <div class="content">
-                            <h2 class="title">Fruit</h2>                            
+                            <h2 class="title">Fruit and berries</h2>                            
                         </div>
                     </a>
                 </div>
@@ -96,7 +96,7 @@
                 <div class="card">
                     <a href="/query-meat" class="card-link">
                         <div class="content">
-                            <h2 class="title">Meat</h2>                            
+                            <h2 class="title">Meat and poultry</h2>                            
                         </div>
                     </a>
                 </div>
@@ -104,7 +104,7 @@
                 <div class="card">
                     <a href="/query-milk" class="card-link">
                         <div class="content">
-                            <h2 class="title">Milk</h2>                            
+                            <h2 class="title">Dairy products</h2>                            
                         </div>
                     </a>
                 </div>  
