--- a/templates/landing.html
+++ b/templates/landing.html
@@ -31,7 +31,7 @@
                     type="text"
                     name="query"
                     class="search-bar"
-                    placeholder="Search for a food category..."
+                    placeholder="Search for a food..."
                     required
                 />
                 <button type="submit" class="search-button">Search</button>
