--- a/static/login_style.css
+++ b/static/login_style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Dosis', sans-serif;
-    background: linear-gradient(to right, #c1dfc4, #deecdd);
+    background: linear-gradient(to right, #c1dfc4, #f3f5f3);
     height: 100vh;
     display: flex;
     align-items: center;
